--- a/templates/macro_mate/index.html
+++ b/templates/macro_mate/index.html
@@ -29,7 +29,7 @@ Home
                 <div class="card-body">
                     <blockquote class="blockquote">
                         <p>To be or not to be</p>
-                        <footer class="card-blockquote">Footer<cite title="Source title">Shakespeare</cite></footer>
+                        <footer class="card-blockquote"><cite title="Source title">Shakespeare</cite></footer>
                     </blockquote>
                 </div>
             </div>
@@ -41,7 +41,7 @@ Home
                     <div class="card-body">
                         <blockquote class="blockquote">
                             <p>Oh my God, I can't believe it...</p>
-                            <footer class="card-blockquote">Footer<cite title="Source title">Kaiser Chiefs</cite>
+                            <footer class="card-blockquote"><cite title="Source title">Kaiser Chiefs</cite>
                             </footer>
                         </blockquote>
                     </div>
