--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,15 +2,18 @@
 
 {% block title_block %}
 
-    Logout
+Logout
 
 {% endblock %}
 
+{% block header_block %}
+Logged Out
+{% endblock %}
+
 {% block body_block %}
-<h1> Logged Out</h1>
 
 <p>
-You have been successfully logged out of MacroMate. Hope to see you soon!
+    You have been successfully logged out of MacroMate. Hope to see you soon!
 
 </p>
 {% endblock %}
