--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -1,11 +1,14 @@
 {% extends 'macro_mate/base.html'%}
 
 {% block title_block %}
-    Registration Closed
+Registration Closed
+{% endblock %}
+
+{% block header_block %}
+Registration Closed
 {% endblock %}
 
 {% block body_block %}
-<h1> Registration Closed </h1>
 <p>
-Unfortunately, registration for MacroMate is currently closed. Better luck next time! </p>
+    Unfortunately, registration for MacroMate is currently closed. Better luck next time! </p>
 {% endblock %}
