--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,17 @@
 {% extends 'macro_mate/base.html'%}
 
 {% block title_block %}
-    Login
+Login
+{% endblock %}
+
+{% block header_block %}
+Login
 {% endblock %}
 
 {% block body_block %}
 
-<h1>Login</h1>
 
-<form method ="post" action=".">
+<form method="post" action=".">
     {% csrf_token %}
 
     {{ form.as_p }}
@@ -19,7 +22,7 @@
 
 <p>
     Don't have an account?
-    <a href ="{% url 'registration_register' %}"> Register here! </a>
+    <a href="{% url 'registration_register' %}"> Register here! </a>
 </p>
 
 {% endblock %}
