--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -21,7 +21,9 @@
 
     <link rel="stylesheet" href="{% static 'css/nutrition_facts.css' %}">
 
-    {% block css %} {% endblock %}
+    {% comment %} A block so other templates can insert custom CSS in the correct place {% endcomment %}
+    {% block css %}
+    {% endblock %}
 
 </head>
 
@@ -29,19 +31,17 @@
 
     <div
         class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-info text-light border-bottom box-shadow">
-        {% comment %} App Title - Could probably get this from a variable {% endcomment %}
 
+        {% comment %} App title, links to home {% endcomment %}
         <h5 class="my-0 mr-md-auto font-weight-normal">
             <a class="text-white" href="/">
                 MacroMate
             </a>
         </h5>
 
-
-        {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
 
-            {% comment %} Header only displays Meals, Weekly Plan & Account if user is logged in {% endcomment %}
+            {% comment %} Header only displays my_meals if user is logged in {% endcomment %}
             <a class="p-2 text-white" href="{% url 'macro_mate:meals' %}">Explore Meals</a>
             {% if  user.is_authenticated %}
             <a class="p-2 text-white" href="{% url 'macro_mate:my_meals' %}">My Meals</a>
@@ -49,12 +49,9 @@
 
             {% comment %} Sign up and Login Space - dynamic to show 'log out' if user is logged in and
             'login' and 'sign up' if user is not logged in {% endcomment %}
-
             {% if user.is_authenticated %}
-
             <a class="p-2 ml-2 btn btn-outline-light" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">
                 Logout</a>
-
             {% else %}
 
             <a class="p-2 ml-2 btn btn-light" href="{% url 'auth_login'%}"> Login</a>
@@ -65,62 +62,59 @@
             {% endif %}
         </nav>
     </div>
-    <div class="background bg-light">
 
-        <div class="container bg-white h-100 py-4">
+    {% comment %} Container wrapper with a nice white offset to contrast with grey {% endcomment %}
+    <div class="container bg-white h-100 py-4">
+        <main>
+            {% comment %} Header block for other templates {% endcomment %}
+            <h1 class="pb-2 my-4 mx-2 border-bottom">
+                {% block header_block %} {% endblock %}
+            </h1>
 
-            <main>
-                <h1 class="pb-2 my-4 mx-2 border-bottom">
-                    {% block header_block %} {% endblock %}
-                </h1>
-
-                {% comment %} Use H1 with H5 styling as this is the main page header {% endcomment %}
-                {% block body_block %}
-                {% endblock %}
-            </main>
-
-        </div>
-
-        {% comment %} Footer for other links etc. {% endcomment %}
-        <footer class="pt-4 pt-md-5 bg-white border-top">
-            <div class="row d-flex flex-row justify-content-around px-2 px-md-5">
-                <div>
-                    <h5>Features</h5>
-                    <ul class="list-unstyled text-small">
-                        <!-- If the user is logged in, display Logout option-->
-                        {% if user.is_authenticated %}
-                        <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a>
-                        </li>
-
-                        {% else %}
-                        <!-- If there is no user logged in, display Login and Register options-->
-                        <li><a class="text-muted" href="{% url 'auth_login'%}">Login</a></li>
-                        <li><a class="text-muted"
-                                href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a>
-                        </li>
-                        {% endif %}
-
-
-                        <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h5>Resources</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Resource</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h5>About</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Team</a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+            {% comment %} Body block for other templates {% endcomment %}
+            {% block body_block %}
+            {% endblock %}
+        </main>
     </div>
 
+    {% comment %} Footer for other links etc. {% endcomment %}
+    <footer class="pt-4 pt-md-5 bg-white border-top">
+        <div class="row d-flex flex-row justify-content-around px-2 px-md-5">
+            <div>
+                <h5>Features</h5>
+                <ul class="list-unstyled text-small">
+                    <!-- If the user is logged in, display Logout option-->
+                    {% if user.is_authenticated %}
+                    <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a>
+                    </li>
 
+                    {% else %}
+                    <!-- If there is no user logged in, display Login and Register options-->
+                    <li><a class="text-muted" href="{% url 'auth_login'%}">Login</a></li>
+                    <li><a class="text-muted"
+                            href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+
+            {% comment %} Potentially add other footer functionality here {% endcomment %}
+
+            {% comment %} <div>
+                <h5>Resources</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Resource</a></li>
+                </ul>
+            </div>
+            <div>
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Team</a></li>
+                </ul>
+            </div> {% endcomment %}
+
+        </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -136,6 +130,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
 
+    {% comment %} A block so other templates can insert javascript to the correct place and not inline {% endcomment %}
     {% block js %}
     {% endblock %}
 </body>
