--- a/templates/macro_mate/index.html
+++ b/templates/macro_mate/index.html
@@ -11,12 +11,7 @@ Home
         <h1 class="jumbotron-heading">MacroMate</h1>
         <div>
             <h2 class="h2">
-                Focus on Food, Fuel your Fitness
-                {% comment %} {% if user.is_authenticated %}
-                howdy {{ user.username }}!
-                {% else %}
-                hey there partner!
-                {% endif %} {% endcomment %}
+                Focus on Food, Fuel your Fitness!
             </h2>
         </div>
     </div>
@@ -28,8 +23,9 @@ Home
             <div class="card">
                 <div class="card-body">
                     <blockquote class="blockquote">
-                        <p>To be or not to be</p>
-                        <footer class="card-blockquote"><cite title="Source title">Shakespeare</cite></footer>
+                        <p>"I was only half the man I was today without MacroMate. It filled the hole where my ex-wife
+                            used to be for sure."</p>
+                        <footer class="card-blockquote"><cite title="Source title">Sebastian Romero</cite></footer>
                     </blockquote>
                 </div>
             </div>
@@ -40,8 +36,9 @@ Home
                 <div class="card">
                     <div class="card-body">
                         <blockquote class="blockquote">
-                            <p>Oh my God, I can't believe it...</p>
-                            <footer class="card-blockquote"><cite title="Source title">Kaiser Chiefs</cite>
+                            <p>"Oh great spirit, truly we are blessed...My Keto and yoga fusion has never felt as zen!"
+                            </p>
+                            <footer class="card-blockquote"><cite title="Source title">Julia Saari</cite>
                             </footer>
                         </blockquote>
                     </div>
