--- a/templates/macro_mate/meal_list.html
+++ b/templates/macro_mate/meal_list.html
@@ -1,6 +1,8 @@
+ {% comment %} A small template to avoid repetition. Displays a title and meals or nothing if there is no meal list
+ {% endcomment %}
+
+ {% if meals %}
  <h2 class="my-3">{% if tag %}{{tag|title}} {% endif %}{{title}} Meals</h2>
-
-
  {% for meal in meals %}
  <ul>
      <li><a href="{% url 'macro_mate:meal' %}{{meal.id}}">
@@ -18,3 +20,4 @@
  </ul>
 
  {% endfor %}
+ {% endif %}
