--- a/static/css/all_meals.css
+++ b/static/css/all_meals.css
@@ -3,8 +3,7 @@ a.card-link:hover {
   color: inherit;
 }
 
-a.card-link > 
-.card:hover {
+a.card-link > .card:hover {
   box-shadow: 1px 8px 20px grey;
 }
 
