--- a/templates/macro_mate/meal.html
+++ b/templates/macro_mate/meal.html
@@ -2,6 +2,79 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Meals
+Meals
 {% endblock %}
 
+{% block header_block %}
+<div class="row justify-content-md-center">
+    <div class="column"> {{meal.name}} </div>
+</div>
+{% endblock %}
+
+{% block body_block %}
+
+{% comment %} bootstrap was used to structure the template {% endcomment %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm" id="image_tags">
+            <div class="row justify-content-md-center">
+                <div class="column" id="image">
+                {% comment %}
+                Getting the image from the meal - if no image displays a default 
+                {% endcomment %}
+                    {% if meal.image %}
+                        <img src="{{meal.image.url}}" alt="{{meal.name}}" width="500" height="auto" />
+                    {% else %}
+                    <img src = "{% static 'images/kitchen-cookware-piled-up-on-brown-wooden-rack-187083.jpg' %}" alt="{{meal.name}}" width="500" height="auto"/>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="col-sm">
+            {% comment%}
+            The nutrition table gets the nutrition info from the meal model
+            {% endcomment %}
+                <div id="nutrition_table">
+                    {% include 'macro_mate/nutrition_table.html' with table_title="Nutritional Analysis" calories_quantity=meal.calories_quantity calories_unit="kcal" fat_quantity=meal.fat_quantity fat_unit="g" protein_quantity=meal.protein_quantity protein_unit="g" carbs_quantity=meal.carbs_quantity carbs_unit="g"%}
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-sm">
+            <div class="row">
+                <div class = "col-md-2">
+                <h4>Tags</h4>
+                </div>
+                
+                {% for tag in meal.tags.all %}
+                <div class="col-md-1">
+                    <div class="mr-1 badge badge-info">{{ tag }}</div>
+                </div>
+                {% endfor %}
+
+            </div>
+            <div class="row">
+                <div class="col-sm" id="meal_info">
+                    <div class="row">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Ingredients</h5>
+                                <p class="card-text">
+                                    <ul>
+                                        {% for ingredient in ingredients %}
+                                        <li>{{ ingredient }}</li>
+                                    </ul>
+                                    {% endfor %}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+{% endblock %}
