--- a/templates/macro_mate/meal.html
+++ b/templates/macro_mate/meal.html
@@ -6,73 +6,81 @@ Meals
 {% endblock %}
 
 {% block header_block %}
-<div class="row justify-content-md-center">
-    <div class="column"> {{meal.name}} </div>
+<div class="text-center">
+    <div>{{meal.name|title}}</div>
+    <small>curated by {{meal.owner|title}} </small>
 </div>
+
 {% endblock %}
 
 {% block body_block %}
 
 {% comment %} bootstrap was used to structure the template {% endcomment %}
 
+{% comment %} Container adds additional padding {% endcomment %}
 <div class="container">
+    <div class=" mb-4">
+
+        <h2 class="h4 d-md-inline mr-4">Categories:</h2>
+
+        {% for cat in meal.categories.all %}
+        <span class="mr-1 badge badge-success">{{ cat }}</span>
+        {% endfor %}
+
+    </div>
+
+    <div class="mb-4">
+        <h2 class="h4 d-md-inline mr-4">Tags:</h2>
+
+        {% for tag in meal.tags.all %}
+        <span class="mr-1 badge badge-info">{{ tag }}</span>
+        {% endfor %}
+    </div>
+
+
     <div class="row">
-        <div class="col-sm" id="image_tags">
-            <div class="row justify-content-md-center">
-                <div class="column" id="image">
-                {% comment %}
-                Getting the image from the meal - if no image displays a default 
-                {% endcomment %}
-                    {% if meal.image %}
-                        <img src="{{meal.image.url}}" alt="{{meal.name}}" width="500" height="auto" />
-                    {% else %}
-                    <img src = "{% static 'images/kitchen-cookware-piled-up-on-brown-wooden-rack-187083.jpg' %}" alt="{{meal.name}}" width="500" height="auto"/>
+        <div class="col-sm col-md-6 mb-4">
+            {% comment %} Getting the image from the meal - if no image displays a default {% endcomment %}
+            <img class="w-100"
+                src="{% if meal.image %}{{meal.image.url}}{% else %}{% static 'images/placeholder.png' %}{% endif %}"
+                alt="{{meal.name}}" width="500" height="auto" />
+
+            {% comment%} The nutrition table gets the nutrition info from the meal model {% endcomment %}
+            {% include 'macro_mate/nutrition_table.html' with table_title="Nutritional Analysis" servings=meal.servings calories_quantity=meal.calories_quantity calories_unit=meal.calories_unit fat_quantity=meal.fat_quantity fat_unit=meal.fat_unit protein_quantity=meal.protein_quantity protein_unit=meal.protein_unit carbs_quantity=meal.carbs_quantity carbs_unit=meal.carbs_unit%}
+        </div>
+
+        <div class="col-sm col-md-6">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="h4 card-title">Ingredients</h2>
+                    <ul class="card-text">
+                        {% for ingredient in ingredients %}
+                        <li>{{ ingredient }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+
+            {% if meal.notes %}
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="h4 card-title">Notes</h2>
+                    <p class="card-text">
+                        {{meal.notes}}
+                    </p>
+                    {% if meal.url %}
+
+                    <a class="btn btn-primary" href="{{meal.url}}">Go to external recipe</a>
+
                     {% endif %}
                 </div>
             </div>
-            <div class="col-sm">
-            {% comment%}
-            The nutrition table gets the nutrition info from the meal model
-            {% endcomment %}
-                <div id="nutrition_table">
-                    {% include 'macro_mate/nutrition_table.html' with table_title="Nutritional Analysis" calories_quantity=meal.calories_quantity calories_unit="kcal" fat_quantity=meal.fat_quantity fat_unit="g" protein_quantity=meal.protein_quantity protein_unit="g" carbs_quantity=meal.carbs_quantity carbs_unit="g"%}
-                </div>
-            </div>
+
+            {% endif %}
         </div>
 
 
-        <div class="col-sm">
-            <div class="row">
-                <div class = "col-md-2">
-                <h4>Tags</h4>
-                </div>
-                
-                {% for tag in meal.tags.all %}
-                <div class="col-md-1">
-                    <div class="mr-1 badge badge-info">{{ tag }}</div>
-                </div>
-                {% endfor %}
 
-            </div>
-            <div class="row">
-                <div class="col-sm" id="meal_info">
-                    <div class="row">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Ingredients</h5>
-                                <p class="card-text">
-                                    <ul>
-                                        {% for ingredient in ingredients %}
-                                        <li>{{ ingredient }}</li>
-                                    </ul>
-                                    {% endfor %}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </div>
 </div>
