--- a/templates/macro_mate/meal.html
+++ b/templates/macro_mate/meal.html
@@ -61,7 +61,7 @@ Meals
                 </div>
             </div>
 
-            {% if meal.notes %}
+            {% if meal.notes or meal.recipe %}
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="h4 card-title">Notes</h2>
