Feature/view meals (#18)
* allow users to add other user's meals to their accounts in the model

* complete url mapping and begin work on template

* add meals api for getting meals in search bar

* add javascript meal search

* add splash screen with recent meals

* fixed context bug by using template classes for views

* add link to home

* finish all meal view with image viewing and minor adjustments

* add style changes for fun

* add tag to meal_list title

* correct minor errors with links

* codacy fixed

* add comments to all_meals javascript

* refactor and comment javascript on add_meal to avoid hard-coded urls

* refactor add_meal with javascript to avoid hard-coding urls

bug fixes

* comment templates

* various changes and updates to comments. Bug fixes

* codacy bug fix

* tidy up and add merges

include missing fields in meal view

* codacy tweaks

--- a/templates/macro_mate/add_meal.html
+++ b/templates/macro_mate/add_meal.html
@@ -12,6 +12,13 @@
 {% block js %}
 <script src="{% static 'js/selectize.js/selectize.min.js' %}"></script>
 <script src="{% static 'js/add_meal.js' %}"></script>
+{% comment %} We add a small script tag here to avoid hard-coding the tags api URL in javascript {% endcomment %}
+<script>
+    $(document).ready(function () {
+        setupAnalysisApiFunctionality("{% url 'api:nutrition' %}");
+        setupTagApiFunctionality("{% url 'api:tags' %}");
+    })
+</script>
 {% endblock %}
 
 {% comment %} Page Title {% endcomment %}
